--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
 		"jest-extended": "^0.11.1"
 	},
 	"devDependencies": {
-		"@sindresorhus/tsconfig": "^0.3.0",
-		"@types/jest": "^24.0.12",
-		"@types/node": "^12.0.0",
+		"@types/jest": "^24.0.13",
+		"@types/node": "^12.0.7",
+		"@typeskrift/tsconfig": "^0.1.0",
 		"jest": "^24.8.0",
-		"prettier": "^1.17.0",
+		"prettier": "^1.18.2",
 		"rimraf": "^2.6.3",
 		"ts-jest": "^24.0.2",
-		"tslint": "^5.16.0",
+		"tslint": "^5.17.0",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^3.4.5"
+		"typescript": "^3.5.1"
 	}
 }
